// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/aws-eks-addon/index getPkgReleases() with matched addon to return all versions of the addon 1`] = `
[
  DescribeAddonVersionsCommand {
    "deserialize": [Function],
    "input": {
      "addonName": "vpc-cni",
      "kubernetesVersion": "1.30",
      "maxResults": 1,
    },
    "middlewareStack": {
      "add": [Function],
      "addRelativeTo": [Function],
      "applyToStack": [Function],
      "clone": [Function],
      "concat": [Function],
      "identify": [Function],
      "identifyOnResolve": [Function],
      "remove": [Function],
      "removeByTag": [Function],
      "resolve": [Function],
      "use": [Function],
    },
    "serialize": [Function],
  },
]
`;

exports[`modules/datasource/aws-eks-addon/index getPkgReleases() with matched addon to return all versions of the addon 2`] = `
{
  "addons": [
    {
      "addonName": "vpc-cni",
      "addonVersions": [
        {
          "addonVersion": "v1.18.1-eksbuild.1",
          "architecture": [
            "amd64",
            "arm64",
          ],
          "compatibilities": [
            {
              "clusterVersion": "1.30",
              "defaultVersion": false,
              "platformVersions": [
                "*",
              ],
            },
          ],
          "requiresConfiguration": false,
        },
        {
          "addonVersion": "v1.18.2-eksbuild.1",
          "architecture": [
            "amd64",
            "arm64",
          ],
          "compatibilities": [
            {
              "clusterVersion": "1.30",
              "defaultVersion": false,
              "platformVersions": [
                "*",
              ],
            },
          ],
          "requiresConfiguration": false,
        },
      ],
      "owner": "aws",
      "publisher": "eks",
      "type": "networking",
    },
  ],
  "nextToken": "mars-east-1",
}
`;

exports[`modules/datasource/aws-eks-addon/index getPkgReleases() without returned addons to be null 1`] = `
[
  DescribeAddonVersionsCommand {
    "deserialize": [Function],
    "input": {
      "addonName": "non-existing-addon",
      "kubernetesVersion": "1.30",
      "maxResults": 1,
    },
    "middlewareStack": {
      "add": [Function],
      "addRelativeTo": [Function],
      "applyToStack": [Function],
      "clone": [Function],
      "concat": [Function],
      "identify": [Function],
      "identifyOnResolve": [Function],
      "remove": [Function],
      "removeByTag": [Function],
      "resolve": [Function],
      "use": [Function],
    },
    "serialize": [Function],
  },
]
`;

exports[`modules/datasource/aws-eks-addon/index getPkgReleases() without returned addons to be null 2`] = `
{
  "addons": [],
}
`;
